code/raw_code/cnn_enhancer_ortholog/logs/cnn_ocp_1006806_2.txt
2021-02-14 11:00:58.736247: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1006808/slurm_script: line 57: 29044 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
Running cyclical learning rate for MSN_D2_hgRmMm_enhVsNonEnhOrth.
One-cycle policy training for 23 epochs.
Learning rates range: 0.001 - 0.01.
Momentum rates range: 0.85 - 0.99.
Dropout: 0.05.
In evaluation mode.
There 49808 positives and 35642 negatives.
Traceback (most recent call last):
  File "train_singleTask_CNN_classifier_OCP.py", line 237, in <module>
    main(args)
  File "train_singleTask_CNN_classifier_OCP.py", line 164, in main
    df = evaluate_sequences(model_name, x_valid, y_valid, args)
  File "/projects/pfenninggroup/machineLearningForComputationalBiology/snATAC_cross_species_caudate/code/raw_code/cnn_enhancer_ortholog/cnn_utils.py", line 203, in evaluate_sequences
    model = load_model(model_name, compile=False)
  File "/home/bnphan/miniconda3/envs/tf2/lib/python3.6/site-packages/tensorflow/python/keras/saving/save.py", line 189, in load_model
    loader_impl.parse_saved_model(filepath)
  File "/home/bnphan/miniconda3/envs/tf2/lib/python3.6/site-packages/tensorflow/python/saved_model/loader_impl.py", line 113, in parse_saved_model
    constants.SAVED_MODEL_FILENAME_PB))
OSError: SavedModel file does not exist at: /projects/pfenninggroup/machineLearningForComputationalBiology/snATAC_cross_species_caudate/data/raw_data/cnn_enhancer_ortholog/models/MSN_D2_hgRmMm_enhVsNonEnhOrth/MSN_D2_hgRmMm_enhVsNonEnhOrth_OCP_NB1000_NE23_BR0.001_MR0.01_BM0.85_MM0.99_DO0.05.h5/{saved_model.pbtxt|saved_model.pb}
2021-02-14 11:07:35.107764: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1006808/slurm_script: line 57: 29206 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
Running cyclical learning rate for MSN_D2_hgRmMm_enhVsNonEnhOrth.
One-cycle policy training for 23 epochs.
Learning rates range: 0.001 - 0.01.
Momentum rates range: 0.85 - 0.99.
Dropout: 0.1.
In evaluation mode.
There 49808 positives and 35642 negatives.
Traceback (most recent call last):
  File "train_singleTask_CNN_classifier_OCP.py", line 237, in <module>
    main(args)
  File "train_singleTask_CNN_classifier_OCP.py", line 164, in main
    df = evaluate_sequences(model_name, x_valid, y_valid, args)
  File "/projects/pfenninggroup/machineLearningForComputationalBiology/snATAC_cross_species_caudate/code/raw_code/cnn_enhancer_ortholog/cnn_utils.py", line 203, in evaluate_sequences
    model = load_model(model_name, compile=False)
  File "/home/bnphan/miniconda3/envs/tf2/lib/python3.6/site-packages/tensorflow/python/keras/saving/save.py", line 189, in load_model
    loader_impl.parse_saved_model(filepath)
  File "/home/bnphan/miniconda3/envs/tf2/lib/python3.6/site-packages/tensorflow/python/saved_model/loader_impl.py", line 113, in parse_saved_model
    constants.SAVED_MODEL_FILENAME_PB))
OSError: SavedModel file does not exist at: /projects/pfenninggroup/machineLearningForComputationalBiology/snATAC_cross_species_caudate/data/raw_data/cnn_enhancer_ortholog/models/MSN_D2_hgRmMm_enhVsNonEnhOrth/MSN_D2_hgRmMm_enhVsNonEnhOrth_OCP_NB1000_NE23_BR0.001_MR0.01_BM0.85_MM0.99_DO0.1.h5/{saved_model.pbtxt|saved_model.pb}
2021-02-14 11:14:13.485638: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1006808/slurm_script: line 57: 29283 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
  File "train_singleTask_CNN_classifier_OCP.py", line 152
    break
    ^
SyntaxError: 'break' outside loop
